<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Add_url_container"
    android:layout_gravity="center"
    android:background="@drawable/background_search"
    android:layout_margin="@dimen/_10sdp">

    <ImageView
        android:layout_width="@dimen/_25sdp"
        android:id="@+id/imageaddurl"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"

        android:src="@drawable/ic_web"
        android:tint="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/add_url"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/imageaddurl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageaddurl"
        app:layout_constraintTop_toTopOf="@id/imageaddurl" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:id="@+id/inputURL"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@null"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/type_url_here"
        android:textColorHint="@color/colorIcon"
        android:textSize="@dimen/_13sdp"
        android:inputType="textUri"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/imageaddurl"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textAdd"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/done"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/inputURL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textBack"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/back"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/inputURL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textAdd"/>



</androidx.constraintlayout.widget.ConstraintLayout>