<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activites.MainActivity">

    <TextView
        android:id="@+id/text_mynotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/notes"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginStart="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Layoutsearch"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/text_mynotes">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            android:tint="@color/colorSearchIcon"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/input_search"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:importantForAutofill="no"
            android:inputType="text"
            android:hint="@string/search_notes"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"
            android:textColorHint="@color/colorTextHint"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/NotesRecyclerView"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/layoutquickactions"
        app:layout_constraintTop_toBottomOf="@+id/Layoutsearch"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutquickactions"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/addbutton"
            android:src="@drawable/ic_add_main"
            android:layout_marginEnd="@dimen/_30sdp"
            android:id="@+id/addnotemain"
            android:tint="@color/colorPrimary"
            android:padding="@dimen/_5sdp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/layoutquickactions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layoutquickactions"/>


    
    
</androidx.constraintlayout.widget.ConstraintLayout>
