<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activites.NotesActivity">

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_marginBottom="@dimen/_40sdp"
        android:paddingBottom="@dimen/_10sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageback"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:src="@drawable/ic_back"
                android:tint="@color/colorIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/Imagesave"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/backgrounddonebtn"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@id/imageback"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageback" />

            <EditText
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageback" />


            <TextView
                android:id="@+id/Timedate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcon"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toTopOf="@+id/Title"
                app:layout_constraintStart_toStartOf="@+id/Title" />

            <View
                android:id="@+id/viewsubtitleIndicator"
                android:layout_width="5dp"
                android:layout_height="@dimen/_35sdp"

                android:background="@drawable/backgroundsubtitleindicator"

                app:layout_constraintEnd_toStartOf="@+id/inputnote"

                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Title"
                app:layout_constraintVertical_bias="0.288" />

            <EditText
                android:id="@+id/inputnote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintTop_toBottomOf="@+id/layoutWebUri" />
            <ImageView
                android:id="@+id/ImageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toBottomOf="@+id/Title"
                android:visibility="gone"
                android:contentDescription="@string/app_name"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/removeImage"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:src="@drawable/ic_delete"
                android:tint="@color/colorWhite"
                android:background="@drawable/delete"
                android:contentDescription="@string/app_name"
                app:layout_constraintTop_toTopOf="@+id/ImageNote"
                app:layout_constraintEnd_toEndOf="@+id/ImageNote"
                android:padding="@dimen/_4sdp"
                android:visibility="gone"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutWebUri"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/ImageNote"
                tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textWebUri"
                android:layout_weight="1"
                android:autoLink="web"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:textSize="@dimen/_13sdp"/>
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:id="@+id/removeurl"
                android:src="@drawable/ic_delete"
                android:tint="@color/colorWhite"
                android:background="@drawable/delete"
                android:contentDescription="@string/app_name"/>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <include layout="@layout/notesettings"/>




</androidx.coordinatorlayout.widget.CoordinatorLayout>